Fix bug where table header would overlap nav bar

--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -52,7 +52,7 @@
   position: sticky;
   top: 0;
   column-gap: 4px;
-  z-index: 1;
+  z-index: 2;
 
   img {
     width: 50px;
